fixed z-index in actionMenu
git-svn-id: http://svn.plone.org/svn/collective/collective.geo.openlayers/trunk@116894 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/collective/geo/openlayers/browser/geo-openlayers.css
+++ b/collective/geo/openlayers/browser/geo-openlayers.css
@@ -1,6 +1,6 @@
 /* drop down menus fix */
+.actionMenu.activated .actionMenuContent,
 #contentActionMenus dl.actionMenu.activated dd {z-index:1008}
-
 
 div.olMap {
     z-index: 0;
@@ -23,6 +23,7 @@ font-weight: bold;
 
 div.olMapViewport {
     text-align: left;
+    z-index: 0;
 }
 
 div.olLayerDiv {
